Migrated other projects from project.json to csproj.

--- a/HelloAspNet/.vscode/tasks.json
+++ b/HelloAspNet/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\project.json"
+                "${workspaceRoot}/HelloAspNet.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
