--- a/HelloEfCore/.vscode/tasks.json
+++ b/HelloEfCore/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\project.json"
+                "${workspaceRoot}/HelloEfCore.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
